--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -25,3 +25,35 @@
     width: 100%;
   }
 }
+.mobile-nav-container {
+  position: relative;
+
+  .mobile-nav {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: blue;
+    width: 100%;
+    min-height: 100%;
+    background: linear-gradient(
+      180deg,
+      $white 0%,
+      $white 55%,
+      rgba(254, 252, 247, 0.504981) 100%
+    );
+    ul {
+      display: flex;
+      flex-direction: column;
+      justify-self: center;
+      align-items: center;
+      margin-top: 40px;
+      a {
+        color: $black !important;
+      }
+    }
+    @include media-breakpoint-up(md) {
+      display: none !important;
+    }
+  }
+}
