--- a/scss/sections/home/_collection.scss
+++ b/scss/sections/home/_collection.scss
@@ -53,11 +53,10 @@
     }
     p {
       max-width: 282px;
-      margin-top: 0;
-      margin-bottom: 1rem;
-      @include media-breakpoint-up(lg) {
-        margin-left: auto;
-        margin-right: auto;
+      margin: 0 auto 1rem;
+      @include media-breakpoint-between(sm, xl) {
+        margin-left: 0;
+        margin-right: 0;
       }
     }
 
